--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "node  --require ts-node/register ./node_modules/typeorm/cli.js ", 
+    "typeorm": "node  --require ts-node/register ./node_modules/typeorm/cli.js ",
     "migration-generate": "npm run build && npm run typeorm -- migration:generate --dataSource configurations/typeorm.config.ts "
-
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -28,8 +27,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.3",
     "nestjs-form-data": "^1.8.7",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
@@ -59,7 +60,7 @@
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "^4.1.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.7.4"
   },
   "jest": {
